--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav ml-auto">
         <li class="navbar-item">
-          <a class="nav-link" href="https://www.google.com">Contact</a>
+          <a class="nav-link" href="">Contact</a>
         </li>
         <li class="navbar-item">
-          <a class="nav-link" href="https://www.google.com">Pricing</a>
+          <a class="nav-link" href="">Pricing</a>
         </li>
         <li class="navbar-item">
-          <a class="nav-link" href="https://www.google.com">Download</a>
+          <a class="nav-link" href="">Download</a>
         </li>
       </ul>
   </div>
